--- a/index.html
+++ b/index.html
@@ -2,24 +2,35 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CoderType</title>
-	<meta name="description" content="A speed typing game made for coders.">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CoderType</title>
+    <meta name="description" content="A speed typing game made for coders.">
 
-	<link rel="stylesheet" href="./styles/reset.css">
-	<link rel="stylesheet" href="./styles/theme.css">
-	<link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/theme.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/rosepine.css">
+    <link rel="stylesheet" href="./styles/catppuccin.css">
+    <link rel="stylesheet" href="./styles/monokai.css">
+    <link rel="stylesheet" href="./styles/solarizedlight.css">
 </head>
 
 <body>
-	<main>
-		<pre id="terminal"><span id="cursor" class="cursor">&nbsp;</span></pre>
-		<pre id="editor"></pre>
-		<pre id="stats"></pre>
-	</main>
-	<script type="module" src="./scripts/index.ts"></script>
+    <main>
+        <select id="select-theme">
+            <option value="Default">Default</option>
+            <option value="monokai">Monokai</option>
+            <option value="rosepine">Rosepine</option>
+            <option value="catppuccin">Catppuccin</option>
+            <option value="solarizedlight">Solarized Light</option>
+        </select>
+        <pre id="terminal"><span id="cursor" class="cursor">&nbsp;</span></pre>
+        <pre id="editor"></pre>
+        <pre id="stats"></pre>
+    </main>
+    <script type="module" src="./scripts/index.ts"></script>
 </body>
 
 </html>
